--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
     This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
+    the `--base-href` argume
+    nt provided to `flutter build`.
   -->
-    <base href="/flutter_web" />
+    <base href="/flutter_web/" />
 
     <meta charset="UTF-8" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible" />
@@ -34,7 +35,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
     <script>
-      var serviceWorkerVersion = '3127065551';
+      var serviceWorkerVersion = '2029487224';
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
