--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
     This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argume
-    nt provided to `flutter build`.
+    the `--base-href` argument provided to `flutter build`.
   -->
     <base href="/flutter_web/" />
 
@@ -35,7 +34,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
     <script>
-      var serviceWorkerVersion = '2435999765';
+      var serviceWorkerVersion = '3553636274';
       var scriptLoaded = false;
       function loadMainDartJs() {
         if (scriptLoaded) {
